--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Biglietto treno</title>
     </head>
     <body>
-        <h1 id="prezzo"></h1>
+        <h1 id="risultato"></h1>
 
         <script src="js/script.js" charset="utf-8"></script>
     </body>
