Logica completa, CSS da sistemare

--- a/index.html
+++ b/index.html
@@ -2,11 +2,64 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <title>Biglietto treno</title>
     </head>
     <body>
-        <h1 id="risultato"></h1>
-
+        <h1 class="top">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <div class="calcolo-prezzo-box">
+            <div class="box-1 flex">
+                <div class="name-surname">
+                    <h3>Nome Cognome</h3>
+                    <input id="nomeCognome" type="text" name="nomeCognome" value="">
+                </div>
+                <div class="kilometers">
+                    <h3>Km da percorrere</h3>
+                    <input id="km" type="number" name="km" value="">
+                </div>
+                <div class="age">
+                    <h3>Fascia d'età</h3>
+                    <select id="age" class="age-choose" name="">
+                        <option value="minorenne">Minorenne</option>
+                        <option value="over65">Over 65</option>
+                        <option value="standard">Standard</option>
+                    </select>
+                </div>
+            </div>
+            <div class="buttons">
+                <input id="generaButton" type="button" name="genera" value="Genera">
+                <input type="button" name="annulla" value="Annulla">
+            </div>
+        </div>
+        <h1 class="bottom">IL TUO BIGLIETTO</h1>
+        <div class="ticket-box">
+            <h2>DETTAGLIO PASSEGGERI</h2>
+            <div class="passengers">
+                <div class="passenger-name">
+                    <h2>NOME PASSEGGERO</h2>
+                    <h2 id="nomeUtente"></h2>
+                </div>
+                <div class="passenger-details flex">
+                    <div class="offerta">
+                        <h2>Offerta</h2>
+                        <p id="offerta"></p>
+                    </div>
+                    <div class="carrozza">
+                        <h2>Carrozza</h2>
+                        <p id="carrozza"></p>
+                    </div>
+                    <div class="codice-cp">
+                        <h2>Codice CP</h2>
+                        <p id="codiceCP"></p>
+                    </div>
+                    <div class="costo-biglietto">
+                        <h2>Costo biglietto</h2>
+                        <p id="costoBiglietto"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="js/script.js" charset="utf-8"></script>
     </body>
 </html>
