--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>NOME PASSEGGERO</h2>
                     <h2 id="nomeUtente"></h2>
                 </div>
-                <div class="passenger-details flex">
+                <div class="passenger-details">
                     <div class="offerta">
                         <h2>Offerta</h2>
                         <p id="offerta"></p>
