Ticket a comparsa implementato

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <input type="button" name="annulla" value="Annulla">
             </div>
         </div>
-        <h1 class="bottom">IL TUO BIGLIETTO</h1>
-        <div class="ticket-box">
+        <h1 id="bottomTitle" class="bottom">IL TUO BIGLIETTO</h1>
+        <div id="ticketBox" class="ticket-box">
             <h2>DETTAGLIO PASSEGGERI</h2>
             <div class="passengers">
                 <div class="passenger-name">
