Bonus pulsante Annulla implementato

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="buttons">
                 <input id="generaButton" type="button" name="genera" value="Genera">
-                <input type="button" name="annulla" value="Annulla">
+                <input id="annullaButton" type="button" name="annulla" value="Annulla">
             </div>
         </div>
         <h1 id="bottomTitle" class="bottom">IL TUO BIGLIETTO</h1>
